automatas_1/JavaCC_Compiler_ETU/ETU.java
/* ETU.java */
/* Generated By:JavaCC: Do not edit this line. ETU.java */
        //	Clase que implementa el parser
        public class ETU implements ETUConstants {
                //	Variables de clase
                private static ETU compiler;
                private static boolean band = true;

                //	Método principal
                public static void main( String[] ETUArgs ){
                        //	Si el usuario escribe por consola
                        if ( ETUArgs.length == 0 ) {
                                System.out.println( "\u005cnConsola>> Escriba c\u00f3digo...\u005cn\u005ct" );
                                compiler = new ETU( System.in );
                        }else if(ETUArgs.length == 1){
                                System.out.println( "\u005cnConsola>> Leyendo del archivo " + ETUArgs[0] + " ...\u005cn\u005ct" );
                                try{
                                        compiler = new ETU( new java.io.FileInputStream( ETUArgs[0] ) );
                                } catch(java.io.FileNotFoundException e){
                                        System.out.println( "Consola>> El fichero " + ETUArgs[0] + " no ha sido encontrado." );
                                        return;
                                }
                        } else {
                                System.out.println("Consola>>   El uso es uno de:");
                        System.out.println("         java ETU < inputfile");
                        System.out.println("O");
                        System.out.println("         java ETU archivo");
                        return;
                        }

                        try{
                                compiler.start();
                                System.out.println( "\u005cnANALISIS SINT\u00c1CTICO TERMINADO." );
                        } catch(ParseException e){
                                System.out.println(e.getMessage());
                        System.out.println("Consola>>  Se encontraron errores durante el parseo.");
                        }
                }

                public static void showMessage(StringBuilder t, String msj) {

                        if (band) {
                                //System.out.printf("\t%-20s %s\n\n", "LEXEMA", "TOKEN");
                                band = false;
                        }
                        //System.out.printf("\t%-20s %s\n", t, msj);
                }

//	Declaracion gramaticas
  final public void start() throws ParseException {
    try {
      jj_consume_token(PR_INICIO);
      nombre();
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
      jj_consume_token(0);
    } catch (ParseException pe) {
System.out.println("Error en la declaracion:   \u005cn \u005ct" + pe.getMessage()) ;
                Token t;
                do {
                                                t = getNextToken();
                } while (t.kind != ETUTokenManager.EOF);
    }
  }

  final public void nombre() throws ParseException {
    jj_consume_token(ID);
  }

  final public void instruccion() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PR_SI:
      case PR_PARA:
      case PR_MIENTRAS:
      case PR_SINO:
      case PR_IMPRIMIR:
      case PR_LEER:
      case PR_HACER:
      case T_CADENA:
      case T_ENT:
      case T_DEC:
      case T_VF:
      case ID:{
        ;
        break;
        }
      default:
        break label_1;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_CADENA:
      case T_ENT:
      case T_DEC:
      case T_VF:
      case ID:{
        declaracion();
        break;
        }
      case PR_SI:
      case PR_SINO:{
        condicional();
        break;
        }
      case PR_PARA:
      case PR_MIENTRAS:
      case PR_HACER:{
        ciclo();
        break;
        }
      case PR_IMPRIMIR:
      case PR_LEER:{
        io();
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void declaracion() throws ParseException {
    try {
      if (jj_2_1(5)) {
        declaracion_ni();
      } else if (jj_2_2(5)) {
        declaracion_i();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != "." || t.image != "}");
    }
  }

  final public void declaracion_ni() throws ParseException {
    try {
      tipo();
      nombre();
      jj_consume_token(DEL_PUNTOYCOMA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion no inicializada: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  final public void declaracion_i() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case T_CADENA:
      case T_ENT:
      case T_DEC:
      case T_VF:{
        tipo();
        nombre();
        jj_consume_token(OP_ASIG);
        valor();
        jj_consume_token(DEL_PUNTOYCOMA);
        break;
        }
      case ID:{
        nombre();
        jj_consume_token(OP_ASIG);
        label_2:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case DEL_PARENTESIS_ABRE:
          case VAL_ENT:
          case VAL_DEC:
          case ID:{
            ;
            break;
            }
          default:
            break label_2;
          }
          expresion();
        }
        jj_consume_token(DEL_PUNTOYCOMA);
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico declaracion inicializada: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != "." || t.image != "}");
    }
  }

  final public void tipo() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case T_CADENA:{
      jj_consume_token(T_CADENA);
      break;
      }
    case T_ENT:{
      jj_consume_token(T_ENT);
      break;
      }
    case T_VF:{
      jj_consume_token(T_VF);
      break;
      }
    case T_DEC:{
      jj_consume_token(T_DEC);
      break;
      }
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void valor() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case VAL_CADENA:{
        jj_consume_token(VAL_CADENA);
        break;
        }
      case VAL_VF:{
        jj_consume_token(VAL_VF);
        break;
        }
      case DEL_PARENTESIS_ABRE:
      case VAL_ENT:
      case VAL_DEC:
      case ID:{
        expresion();
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico valor invalido: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != "." || t.image != "}");
    }
  }

  final public void expresion() throws ParseException {
    if (jj_2_3(3)) {
      termino();
      jj_consume_token(OP_ADD);
      expresion();
    } else if (jj_2_4(3)) {
      termino();
      jj_consume_token(OP_SUB);
      expresion();
    } else if (jj_2_5(3)) {
      termino();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void termino() throws ParseException {
    if (jj_2_6(3)) {
      factor();
      jj_consume_token(OP_MUL);
      termino();
    } else if (jj_2_7(3)) {
      factor();
      jj_consume_token(OP_DIV);
      termino();
    } else if (jj_2_8(3)) {
      factor();
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void factor() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DEL_PARENTESIS_ABRE:{
        jj_consume_token(DEL_PARENTESIS_ABRE);
        expresion();
        jj_consume_token(DEL_PARENTESIS_CIERRA);
        break;
        }
      case ID:{
        nombre();
        break;
        }
      case VAL_ENT:{
        jj_consume_token(VAL_ENT);
        break;
        }
      case VAL_DEC:{
        jj_consume_token(VAL_DEC);
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en la expresion aritmetica: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")" || t.image != ";" || t.image != "}");
    }
  }

  final public void condicional() throws ParseException {
    try {
      if (jj_2_9(11)) {
        pif();
      } else if (jj_2_10(11)) {
        pif_else();
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en sentencias condicionales: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}");
    }
  }

  final public void pif() throws ParseException {
    try {
      jj_consume_token(PR_SI);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      instruccion();
    } catch (ParseException pe) {
System.out.println("Hubo un error sintactico sentencia if: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while ( t.image != "}");
                condicional();
    }
  }

  final public void pif_else() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PR_SI:{
        jj_consume_token(PR_SI);
        jj_consume_token(DEL_PARENTESIS_ABRE);
        condicion();
        jj_consume_token(DEL_PARENTESIS_CIERRA);
        instruccion();
        jj_consume_token(PR_SINO);
        instruccion();
        break;
        }
      case PR_SINO:{
        jj_consume_token(PR_SINO);
        instruccion();
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("Hubo un error sintactico sentencia if-else: \u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while ( t.image != "}");
                condicional();
    }
  }

  final public void condicion() throws ParseException {
    try {
      expresion();
      op_log();
      expresion();
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en condicion: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ")");
    }
  }

  final public void op_log() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OP_MENOR:{
      jj_consume_token(OP_MENOR);
      break;
      }
    case OP_MENOR_IGUAL:{
      jj_consume_token(OP_MENOR_IGUAL);
      break;
      }
    case OP_MAYOR_IGUAL:{
      jj_consume_token(OP_MAYOR_IGUAL);
      break;
      }
    case OP_MAYOR:{
      jj_consume_token(OP_MAYOR);
      break;
      }
    case OP_IGUAL:{
      jj_consume_token(OP_IGUAL);
      break;
      }
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ciclo() throws ParseException {
    try {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PR_MIENTRAS:{
        pwhile();
        break;
        }
      case PR_HACER:{
        pdo_while();
        break;
        }
      case PR_PARA:{
        pfor();
        break;
        }
      default:
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en ciclos: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}" || t.image != ";");
    }
  }

  final public void pwhile() throws ParseException {
    try {
      jj_consume_token(PR_MIENTRAS);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sintactico en while: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != "}");
    }
  }

  final public void pdo_while() throws ParseException {
    try {
      jj_consume_token(PR_HACER);
      jj_consume_token(DEL_LLAVE_ABRE);
      instruccion();
      jj_consume_token(DEL_LLAVE_CIERRA);
      jj_consume_token(PR_MIENTRAS);
      jj_consume_token(DEL_PARENTESIS_ABRE);
      condicion();
      jj_consume_token(DEL_PARENTESIS_CIERRA);
      jj_consume_token(DEL_PUNTOYCOMA);
    } catch (ParseException pe) {
System.out.println("\u005cnHubo un error sint\u00e1ctico en do-while: \u005cnDetalles:\u005cn\u005ct" + pe.getMessage());
                Token t;
                do {
                        t = getNextToken();
                } while (t.image != ";");
    }
  }

  final public void pfor() throws ParseException {
    jj_consume_token(PR_PARA);
    jj_consume_token(DEL_PARENTESIS_ABRE);
    declaracion_i();
    jj_consume_token(DEL_PUNTOYCOMA);
    condicion();
    jj_consume_token(DEL_PUNTOYCOMA);
    actualizacion();
    jj_consume_token(DEL_PARENTESIS_CIERRA);
    instruccion();
  }

  final public void actualizacion() throws ParseException {
    if (jj_2_11(2)) {
      nombre();
      jj_consume_token(OP_INC);
    } else if (jj_2_12(2)) {
      nombre();
      jj_consume_token(OP_DEC);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void actualizacion2() throws ParseException {
    if (jj_2_13(3)) {
      nombre();
      jj_consume_token(OP_INC);
      jj_consume_token(DEL_PUNTOYCOMA);
    } else if (jj_2_14(3)) {
      nombre();
      jj_consume_token(OP_DEC);
      jj_consume_token(DEL_PUNTOYCOMA);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void io() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case PR_IMPRIMIR:{
      imprimir();
      break;
      }
    case PR_LEER:{
      leer();
      break;
      }
    default:
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void imprimir() throws ParseException {
    jj_consume_token(PR_IMPRIMIR);
    jj_consume_token(DEL_PARENTESIS_ABRE);
    jj_consume_token(VAL_CADENA);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OP_ADD:{
        ;
        break;
        }
      default:
        break label_3;
      }
      jj_consume_token(OP_ADD);
      nombre();
    }
    jj_consume_token(DEL_PARENTESIS_CIERRA);
    jj_consume_token(DEL_PUNTOYCOMA);
  }

  final public void leer() throws ParseException {
    jj_consume_token(PR_LEER);
    jj_consume_token(DEL_PARENTESIS_ABRE);
    tipo();
    jj_consume_token(DEL_COMA);
    nombre();
    jj_consume_token(DEL_PARENTESIS_CIERRA);
    jj_consume_token(DEL_PUNTOYCOMA);
  }

  private boolean jj_2_1(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_2(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_3(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_3(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_4(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_4(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_5(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_5(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_6(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_6(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_7(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_7(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_8(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_8(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_9(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_9(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_10(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_10(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_11(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_11(); }
    catch(LookaheadSuccess ls) { return true; }
  }

  private boolean jj_2_12(int xla)
 {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_12(); }
    catch(LookaheadSuccess ls) { return true; }
  }
